--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,4 @@
-FROM openjdk:8
-EXPOSE 8082
-ADD target/registration.jar
-ENTRYPOINT [“java”,”-jar”,”/registration-0.0.1-SNAPSHOT.jar”]
+FROM openJDK:8
+ARG JAR_FILE
+COPY $(JAR_FILE) registration.jar
+ENTRYPOINT [“java”,”-jar”,”/registration.jar”]
